--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -143,7 +143,7 @@
   text-align: center;
   margin-top: 50px;
   height: 600px;
-  background-color: rgba(34, 189, 246, .8);
+  background-image: url("http://www.planwallpaper.com/static/images/cool-background.jpg");
 }
 
 .how-title {
@@ -154,12 +154,13 @@
 }
 
 .info-group {
-  margin-left: 140px;
-  max-width: 250px;
+  margin-left: 100px;
+  max-width: 300px;
   box-shadow: 0 0 10px rgba(255,255,255,.8);
   margin-top: 10px;
   padding-left: 30px;
   padding-right: 30px;
+  background-color: tomato;
 }
 
 
