--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,7 +21,7 @@
   </div>
 
   <div class="sign-up-btn">
-    <%= f.submit "Sign up", :class=>'btn btn-success' %>
+    <%= f.submit "Sign up", :class=>'btn btn-primary' %>
   </div>
 <% end %>
 <%= render "devise/shared/links" %>
