--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,7 @@ body {
   font-size: 16px;
   font-weight: 500;
   box-shadow: 0 0 5px;
+  padding-bottom: 5px;
 
   a {
   color: rgba(1,1,1,.5);
@@ -173,7 +174,7 @@ text-align: center;
 
 .avatar-button {
   padding-right: 10px;
-  padding-top: 4px;
+  padding-top: 7px;
 
     button:nth-child(2) {
       margin-top: 5.5px;
@@ -231,7 +232,7 @@ text-align: center;
 
 .notification-btn {
   padding-right: 10px;
-  padding-top: 10px;
+  padding-top: 12px;
   display: flex;
   letter-spacing: 3px;
 }
@@ -256,7 +257,17 @@ text-align: center;
 }
 
 .nav-logo {
-  padding-top: 7px;
+  padding-top: 3px;
+  font-size: 26px;
+
+    a{
+      font-size: 34px;
+      font-family: fantasy;
+      padding-right: 12px;
+      &:hover {
+        text-decoration: none;
+       }
+    }
 }
 
 footer {
@@ -293,7 +304,6 @@ footer {
     a {
       color: rgba(1, 1, 1, .5);
       margin-right: 40px;
-      border-bottom: 1px solid rgba(1,1,1,.1);
       text-decoration: none;
         &:hover {
           color: #222;
@@ -306,7 +316,7 @@ footer {
 }
 
 .message-btn {
-  margin-right: 29px;
+  margin-right: 14px;
   margin-top: 10px;
 
   .glyphicon {
@@ -342,7 +352,11 @@ footer {
 
 .user-session {
     margin-right: 10px;
-    margin-top: 2px;
+    margin-top: 5px;
+
+    a {
+      font-family: inherit;
+      }
 
     li:nth-child(1) {
       margin-left: 15px;
@@ -383,13 +397,16 @@ footer {
   position: absolute;
   z-index: 100;
   margin-top: 12px;
+  margin-left: -58px;
 }
 
 .share-btn {
-  padding-right: 15px;
+    text-align: center;
+    width: 100px;
 
   a{
-    margin-left: 10px;
+    margin-left: -20px;
+    padding-left: 20px;
   }
 }
 
@@ -401,7 +418,7 @@ footer {
 }
 
 .dropdown-menu {
-  width: 200px;
+  width: 280px;
   font-size: 20px;
   color: black;
 }
