--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -184,12 +184,14 @@
 
   button {
     padding: 10px;
-    padding: 10px;
     border-radius: 15px;
     border-style: none;
     background-color: white;
     border: 2px solid rgba(1,1,1,.2);
     text-decoration: none;
+      &:hover{
+        background-color: rgba(1,1,1,.5);
+      }
     }
 
     button:nth-child(2) {
