--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,21 +32,22 @@ body {
 }
 
 .bar {
-    width: 100%;
-}
+  width: 100%;
+ }
+
 .navigation {
   color: rgba(1,1,1,.4);
-  background-color: white;
+  background-color: #fafafa;
   font-size: 16px;
   font-weight: 500;
-  box-shadow: 0 0 5px;
-  padding-bottom: 5px;
+  border-bottom: 2px solid rgba(1,1,1,.1);
+  padding-bottom: 7px;
 
   a {
-  color: rgba(1,1,1,.5);
-  font-size: 16px;
-  font-weight: 400;
-  font-family: serif;
+    color: rgba(1,1,1,.5);
+    font-size: 16px;
+    font-weight: 400;
+    font-family: serif;
   }
 
   li {
@@ -59,21 +60,21 @@ body {
 }
 
 .form-div {
-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-height: 400px;
-max-width: 500px;
-padding: 19px 29px 29px;
-margin: 0 auto 20px;
-background-color: rgba(255, 255, 255, .8);
-border: 2px solid #e5e5e5;
-margin-top: 20px;
-text-align: center;
--webkit-border-radius: 5px;
-   -moz-border-radius: 5px;
-        border-radius: 5px;
--webkit-box-shadow: 0 1px 2px rgba(0,0,0,0);
-   -moz-box-shadow: 0 1px 2px rgba(0,0,0,0);
-        box-shadow: 0 1px 2px rgba(0,0,0,0);
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  height: 400px;
+  max-width: 500px;
+  padding: 19px 29px 29px;
+  margin: 0 auto 20px;
+  background-color: rgba(255, 255, 255, .8);
+  border: 2px solid #e5e5e5;
+  margin-top: 20px;
+  text-align: center;
+  -webkit-border-radius: 5px;
+     -moz-border-radius: 5px;
+          border-radius: 5px;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0);
+     -moz-box-shadow: 0 1px 2px rgba(0,0,0,0);
+          box-shadow: 0 1px 2px rgba(0,0,0,0);
 }
 
 .form-div input[type="text"],
@@ -87,8 +88,7 @@ text-align: center;
   margin-bottom: 20px;
 }
 
- .sign-up-btn {
-
+.sign-up-btn {
    .btn {
       padding-left: 20px;
       padding-right: 20px;
@@ -97,6 +97,7 @@ text-align: center;
       width: 300px;
    }
 }
+
 .collab input[type="text"]{
   font-size: 16px;
   height: auto;
@@ -110,14 +111,16 @@ text-align: center;
   float: right !important;
 }
 
-  .avatar-btn img {
-    margin-top: 3.5px;
-    margin-right: 10px;
-  }
-  .home-circle {
+.avatar-btn img {
+  margin-top: 3.5px;
+  margin-right: 10px;
+}
+
+.home-circle {
   text-align: center;
   margin-top: 20px;
-  }
+}
+
 .home-circle img {
   width: 400px;
   height: 350px;
@@ -151,7 +154,6 @@ text-align: center;
   text-decoration: none;
 }
 
-
 .captions h2:nth-child(2){
   padding-right: 170px;
 }
@@ -176,8 +178,8 @@ text-align: center;
   padding-right: 10px;
   padding-top: 7px;
 
-    button:nth-child(2) {
-      margin-top: 5.5px;
+  button:nth-child(2) {
+    margin-top: 5.5px;
     }
 }
 
@@ -186,12 +188,27 @@ text-align: center;
 }
 
 .title-all {
+  color: white;
+  font-weight: 100;
+  letter-spacing: -1px;
+  background-color: #057fcc;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  margin-right: -15px;
+  margin-left: -14px;
+  margin-top: -1px;
+}
+
+.title-sub {
   border-bottom: 3px solid rgba(1, 0, 1, .2);
   padding-bottom: 5px;
   color: rgba(1,1,1,.5);
   font-weight: 200;
   letter-spacing: -1px;
 }
+
+
 
 .scroller {
   div {
@@ -260,7 +277,7 @@ text-align: center;
   padding-top: 3px;
   font-size: 26px;
 
-    a{
+    a {
       font-size: 34px;
       font-family: fantasy;
       padding-right: 12px;
@@ -276,12 +293,14 @@ footer {
   border-top: 1px solid rgba(1,1,1,.3);
   color: #777;
   height: 100px;
+
   a {
     color: #555;
     &:hover {
       color: #222;
     }
   }
+
   ul {
     float: right;
     list-style: none;
@@ -300,6 +319,7 @@ footer {
   border-bottom: 1px solid rgba(1, 1, 1, .2);
   width: 100%;
   padding-right: 25px;
+  background-color: #fafafa;
 
     a {
       color: rgba(1, 1, 1, .5);
@@ -307,7 +327,10 @@ footer {
       text-decoration: none;
         &:hover {
           color: #222;
+          }
         }
+    a:active {
+      border-bottom: 1px solid black;
     }
 
     ul {
