--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,11 +1,11 @@
 <nav class="nav-index">
-  <ul>
-  <a><%= link_to "Most Popular", most_popular_path(@wikis) %></a>
-  <a><%= link_to "Most Recent", most_recent_path(@wikis) %></a>
+  <ul class="navlinks">
+    <%= link_to "Most Popular", most_popular_path(@wikis) %>
+    <%= link_to "Most Recent", most_recent_path(@wikis) %>
   <% if user_signed_in? %>
-  <a><%= link_to "Likes", likes_path(@wikis) %></a>
-  <a><%= link_to "Followed", followed_users_path(@wikis) %></a>
+    <%= link_to "Likes", likes_path(@wikis) %>
+    <%= link_to "Followed", followed_users_path(@wikis) %>
   <% end %>
-  <a><%= link_to "Regions", categories_path %></a>
+    <%= link_to "Regions", categories_path %>
 </ul>
 </nav>
