--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="container title-all"> Edit Your Profile </h1>
+<h1 class="container title-sub"> Edit Your Profile </h1>
 <div>
     <%= render partial: 'users/form' %>
 </div>
