--- a/app/views/wikis/_showlikes.html.erb
+++ b/app/views/wikis/_showlikes.html.erb
@@ -1,4 +1,4 @@
-<% @wikis.take(3).each do |vote| %>
+<% likes.take(3).each do |vote| %>
     <div class="wiki-style col-sm-3">
         <%= link_to image_tag(vote.wiki.image.url(:medium)), vote.wiki %>
         <div>
