--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -58,3 +58,20 @@
   background-color: rgba(1,1,1,.1);
   padding-bottom: 10px;
 }
+
+.msgs-heading {
+  background-color: #057fcc;
+  font-size: 36px;
+  color: white;
+  font-weight: 100;
+  letter-spacing: 1px;
+  padding: 10px;
+  padding-left: 20px;
+  margin-top: 0;
+  margin-left: -22px;
+  width: 1439px;
+
+    i {
+      padding-right: 10px;
+    }
+}
