--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,7 +41,7 @@ body {
   font-size: 16px;
   font-weight: 500;
   border-bottom: 2px solid rgba(1,1,1,.1);
-  padding-bottom: 7px;
+  padding-bottom: 1px;
 
   a {
     color: rgba(1,1,1,.5);
@@ -267,10 +267,21 @@ body {
 
 .dropdown-menu {
   letter-spacing: .5px;
+
+    li {
+      &:hover {
+        background-color: rgba(1,1,1,.1);
+      }
+    }
+
+    a {
+      text-decoration: none;
+    }
 }
 
 .presentation {
   padding-right: 5px;
+  padding-top: 5px;
 }
 
 .nav-logo {
@@ -410,16 +421,16 @@ footer {
   font-weight: 200;
 }
 
-.icon {
+.icon-explore {
   position: absolute;
   z-index: 100;
-  margin-top: 10px;
+  margin-top: 13px;
 }
 
 .icon-share {
   position: absolute;
   z-index: 100;
-  margin-top: 12px;
+  margin-top: 15px;
   margin-left: -58px;
 }
 
@@ -430,9 +441,17 @@ footer {
   a{
     margin-left: -20px;
     padding-left: 20px;
+    font-family: sans-serif;
+    font-size: 18px;
   }
 }
 
+.explore-btn {
+  a{
+    font-family: sans-serif;
+    font-size: 18px;
+  }
+}
 .actions {
   .btn {
     font-size: 16px;
