--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <div class="container-bar">
     <ul class="nav nav-pills navbar-inverse navigation">
       <li class="presentation nav-logo"><i class="fa fa-grav fa-lg" aria-hidden="true"> <%= link_to "Travelog", welcome_index_path %></i></li>
-      <li class="presentation"><i class="icon fa fa-map-pin fa-lg" aria-hidden="true"></i> <%= link_to "Explore", all_wikis_path %></li>
+      <li class="presentation explore-btn"><i class="icon-explore fa fa-map-pin fa-lg" aria-hidden="true"></i> <%= link_to "Explore", all_wikis_path %></li>
         <div class="search-bar">
           <%= form_tag(wikis_path, :method => "get", id: "search-form") do %>
             <%= text_field_tag :search, params[:search], placeholder: "Search Logs" %>
