--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container main">
   <h1 class="title-all"><%= @wikis.count %> Results</h1>
   <% if @wikis.present? %>
     <%= render 'wikis/showall'%>
