--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container message-box">
-  <h1 class="title-all">Chat</h1>
+  <h1 class="title-all">Send a message </h1>
   <p>Back to <%= link_to "Messages", conversations_path %></p>
 <% if @over_ten %>
  <%= link_to 'Show Previous', '?m=all' %>
