--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,7 +65,7 @@ body {
   max-width: 500px;
   padding: 19px 29px 29px;
   margin: 0 auto 20px;
-  background-color: rgba(255, 255, 255, .8);
+  background-color: rgba(1,1,1,.1);
   border: 2px solid #e5e5e5;
   margin-top: 20px;
   text-align: center;
@@ -190,7 +190,7 @@ body {
 .title-all {
   color: white;
   font-weight: 100;
-  letter-spacing: -1px;
+  letter-spacing: 1px;
   background-color: #057fcc;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -198,6 +198,12 @@ body {
   margin-right: -15px;
   margin-left: -14px;
   margin-top: -1px;
+
+    a {
+      color: white;
+      font-size: 16px;
+      margin-top: 20px;
+    }
 }
 
 .title-sub {
@@ -267,35 +273,33 @@ body {
 
 .dropdown-menu {
   letter-spacing: .5px;
+  background-color: dimgrey;
 
     li {
       &:hover {
-        background-color: rgba(1,1,1,.1);
+        background-color: rgba(255,255,255,.5);
       }
     }
 
     a {
       text-decoration: none;
+      padding-right: 220px;
+      color: white;
+    }
+
+    i {
+      color: white;
     }
 }
 
 .presentation {
   padding-right: 5px;
-  padding-top: 5px;
 }
 
 .nav-logo {
-  padding-top: 3px;
-  font-size: 26px;
-
-    a {
-      font-size: 34px;
-      font-family: fantasy;
-      padding-right: 12px;
-      &:hover {
-        text-decoration: none;
-       }
-    }
+  img{
+    height: 30px;
+  }
 }
 
 footer {
