--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -70,17 +70,17 @@
       <article class="info-group">
         <p class="how-img glyphicon glyphicon-camera"></p>
         <p class="how-text">Record</p>
-        <p class="how-desc">Bacon ipsum dolor amet filet mignon meatball spare ribs fatback bacon shankle. fatback bacon shankle.<p>
+        <p class="how-desc">Travelled recently? Log your adventure for memories or to share.<p>
       </article>
       <article class="info-group">
         <p class="how-img glyphicon glyphicon-cloud-upload"></p>
         <p class="how-text">Share</p>
-        <p class="how-desc">Bacon ipsum dolor amet filet mignon meatball spare ribs fatback bacon shankle. dffggdfgsdfgsdfgsdfgdsfg.<p>
+        <p class="how-desc">Have any pictures, videos, or stories from your vacation? Let the world know what you've been up to.<p>
       </article>
       <article class="info-group">
         <p class="how img glyphicon glyphicon-thumbs-up"></p>
         <p class="how-text">Interact</p>
-        <p class="how-desc">Bacon ipsum dolor amet filet mignon meatball spare ribs fatback bacon shankle.<p>
+        <p class="how-desc">Explore the world from a different perspective. Learn everyone's story and make connections!<p>
       </article>
     </div>
   </div>
