--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -38,11 +38,11 @@
   padding-top: 10px;
   border: 1px solid rgba(1, 0, 1, .1);
   background-color: rgba(1,1,1,.1);
-}
 
-.cat-idx img{
-  height: 250px;
-  width: 400px;
+    img {
+      height: 300px;
+      width: 830px;
+    }
 }
 
 .cat-captions {
