--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -11,13 +11,13 @@
     <img src="http://cdni.condenast.co.uk/646x430/g_j/giza_cnt_30mar10_iStock_b.jpg">
   </div>
   <div class="cat-idx index-all">
-    <img src="http://3.bp.blogspot.com/_9Zf_P9g6cuo/Scz1gJs0QaI/AAAAAAAADlc/wT3QKQQPYJE/s800/great+wall+of+china.jpg">
+    <img src="http://i1.wp.com/thepointsguy.com/wp-content/uploads/2015/05/shutterstock_160690853.jpg?resize=830%2C300">
   </div>
   <div class="cat-idx index-all">
-    <img src="http://www.travelchannel.com/content/dam/images/travel/fullset/2013/12/04/7f/sydney-opera-house-2.rend.tccom.616.462.jpeg">
+    <img src="http://i0.wp.com/thepointsguy.com/wp-content/uploads/2015/02/Park-Hyatt-Sydney-Exterior-Opera-House-View.jpg?resize=830%2C300">
   </div>
   <div class="cat-idx index-all">
-    <img src="https://cache-graphicslib.viator.com/graphicslib/thumbs674x446/2050/SITours/paris-in-one-day-sightseeing-tour-in-paris-130592.jpg">
+    <img src="http://i2.wp.com/thepointsguy.com/wp-content/uploads/2015/05/shutterstock_103780211.jpg?resize=830%2C300">
   </div>
   <div class="cat-idx index-all">
     <img src="http://www.whitakercenter.org/media/images/JER-Film-Stills-Sunset-Dustin-Farrell.jpg">
@@ -26,6 +26,7 @@
     <img src="https://artsemiotic123.files.wordpress.com/2014/08/times_square.jpg">
   </div>
   <div class="cat-idx index-all">
-    <img src="http://serwer10477.lh.pl/wp-content/uploads/2015/11/Machu-Pichu-Peru.jpg">
+    <p>South America</p>
+    <img src="http://www.lbvtravel.com/SiteContent/nx2/Sites/852-346344/CustomContent/slider_data1_images/machupichu.jpg">
   </div>
 </div>
