--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,8 @@
 <footer class="footer">
   <nav>
-    <ul>
+    <ul class="footer-links">
       <li><%= link_to "About Us", welcome_about_path %></li>
-      <li><%= link_to "Features", "#" %></li>
-      <li><%= link_to "Contact Us", "#" %></li>
+      <li><%= link_to "Guidelines", welcome_guidelines_path %></li>
     </ul>
   </nav>
 </footer>
