--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,7 +11,7 @@
       <div class="carousel-caption">
         <div class="cap-one">
          <h1>Welcome to Travelog</h1>
-         <p>Travel, Share, and Explore.</p>
+         <p>Travel, Share, and Explore</p>
         </div>
      </div>
    </div>
@@ -21,7 +21,7 @@
       <div class="carousel-caption">
         <div class="cap-two">
           <h1>Log Your Adventures</h1>
-          <p>Upload and share your travel photos to the whole world</p>
+          <p>A diary for your vacations</p>
         </div>
       </div>
     </div>
@@ -31,7 +31,7 @@
        <div class="carousel-caption">
          <div class="cap-three">
            <h1>Explore the World</h1>
-           <p>Find a new place you want to go.</p>
+           <p>Find your next adventure</p>
          </div>
        </div>
      </div>
@@ -95,4 +95,3 @@
       <% end %>
     </div>
   </div>
-<%= render 'layouts/footer' %>
