--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,7 +41,6 @@ body {
   font-size: 16px;
   font-weight: 500;
   border-bottom: 2px solid rgba(1,1,1,.1);
-  padding-bottom: 1px;
 
   a {
     color: rgba(1,1,1,.5);
@@ -273,18 +272,19 @@ body {
 
 .dropdown-menu {
   letter-spacing: .5px;
-  background-color: dimgrey;
+  background-color: darkorange;
+  width: 280px;
+  font-size: 20px;
 
     li {
-      &:hover {
-        background-color: rgba(255,255,255,.5);
+      a {
+        color: white;
+        font-family: sans-serif;
+        font-weight: 100;
+        &:hover {
+          background-color: rgba(255,255,255,.5);
+        }
       }
-    }
-
-    a {
-      text-decoration: none;
-      padding-right: 220px;
-      color: white;
     }
 
     i {
@@ -303,21 +303,25 @@ body {
 }
 
 footer {
-  margin-top: 10px;
   padding-top: 5px;
   border-top: 1px solid rgba(1,1,1,.3);
   color: #777;
-  height: 100px;
+  height: 75px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  margin-bottom: -100px;
 
   a {
     color: #555;
+    font-weight: 800;
     &:hover {
       color: #222;
     }
   }
 
   ul {
-    float: right;
+    float: left;
     list-style: none;
     li {
       float: left;
@@ -354,8 +358,8 @@ footer {
 }
 
 .message-btn {
-  margin-right: 14px;
-  margin-top: 10px;
+  margin-right: 24px;
+  margin-top: 11px;
 
   .glyphicon {
     font-size: 20px;
@@ -373,8 +377,12 @@ footer {
 
 .search-bar {
   position: absolute;
-  margin-left: 500px;
-  margin-top: 4px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -27px;
+  width: 390px;
 
     input[type="text"] {
       width: 300px;
@@ -390,7 +398,7 @@ footer {
 
 .user-session {
     margin-right: 10px;
-    margin-top: 5px;
+    margin-top: -28px;
 
     a {
       font-family: inherit;
@@ -463,8 +471,11 @@ footer {
   }
 }
 
-.dropdown-menu {
-  width: 280px;
-  font-size: 20px;
-  color: black;
+.btn-region {
+  margin-top: 8px;
+
+  button {
+    font-size: 18px;
+    color: rgba(1,1,1,.5);
+  }
 }
