--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -7,14 +7,13 @@
 }
 
 .wiki-style {
-  zoom: 1;
   background-color: white;
   border-radius: 3px;
   padding-top: 15px;
   padding-bottom: 5px;
   min-width: 344px;
   font-size: 14px;
-  margin-left: 29px;
+  margin-left: 34px;
   margin-top: 10px;
   margin-bottom: 20px;
   box-shadow: 1px 1px 5px rgba(1,1,1,.3);
@@ -261,11 +260,6 @@
   padding-bottom: 6px;
 }
 
-.wiki-show-index {
-  width: 100%;
-  border-bottom: 1px solid rgba(1,1,1,.2);
-}
-
 #show-title {
   font-size: 45px;
   font-weight: 100;
@@ -278,6 +272,8 @@
       font-weight: 200;
       color: rgba(1,1,1,.5);
     }
+}
 
-
+#border {
+  border-top: 1px solid rgba(1,1,1,.1);
 }
