--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,3 +1,5 @@
-<div>
-  <h1>About Us</h1>
+<div class="container about">
+  <h1>About Travelog</h1>
+  <p>Travelog allows you record your adventures wherever you go. Log your photos, videos, and stories and choose to share them with the world. Discover adventures and connect with people all over the world.
 </div>
+<%= render 'layouts/footer' %>
