--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -70,7 +70,7 @@
       <article class="info-group">
         <p class="how-img glyphicon glyphicon-camera"></p>
         <p class="how-text">Record</p>
-        <p class="how-desc">Travelled recently? Log your adventure for memories or to share.<p>
+        <p class="how-desc">Travelled recently? Log your adventure for memories or share with others.<p>
       </article>
       <article class="info-group">
         <p class="how-img glyphicon glyphicon-cloud-upload"></p>
@@ -80,7 +80,7 @@
       <article class="info-group">
         <p class="how img glyphicon glyphicon-thumbs-up"></p>
         <p class="how-text">Interact</p>
-        <p class="how-desc">Explore the world from a different perspective. Learn everyone's story and make connections!<p>
+        <p class="how-desc">Explore the world from a different perspective. Learn everyone's story and make connections.<p>
       </article>
     </div>
   </div>
