--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -307,10 +307,8 @@ footer {
   border-top: 1px solid rgba(1,1,1,.3);
   color: #777;
   height: 75px;
-  position: absolute;
-  bottom: 0;
+  position: relative;
   width: 100%;
-  margin-bottom: -100px;
 
   a {
     color: #555;
