--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,6 +67,7 @@ body {
   background-color: rgba(1,1,1,.1);
   border: 2px solid #e5e5e5;
   margin-top: 20px;
+  margin-bottom: 250px;
   text-align: center;
   -webkit-border-radius: 5px;
      -moz-border-radius: 5px;
@@ -306,7 +307,7 @@ footer {
   padding-top: 5px;
   border-top: 1px solid rgba(1,1,1,.3);
   color: #777;
-  height: 75px;
+  height: 50px;
   position: relative;
   width: 100%;
 
