--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -308,8 +308,10 @@ footer {
   border-top: 1px solid rgba(1,1,1,.3);
   color: #777;
   height: 50px;
-  position: relative;
+  position: absolute;
   width: 100%;
+  bottom: 0;
+  margin-bottom: -50px;
 
   a {
     color: #555;
