--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
           <% end %>
         </div>
         <% if user_signed_in? %>
-        <li class="presentation share-btn"><%= link_to "Share", new_wiki_path %></li>
+        <li class="presentation share-btn"><%= link_to "New Log", new_wiki_path %></li>
         <div class="avatar-button btn-group pull-right">
           <button type="button" class="btn btn-default btn-avatar">  <%= image_tag(current_user.image.url(:thumb)) %></button>
           <button type="button" class="btn btn-default dropdown-toggle btn-avatar" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
