--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,7 +21,7 @@
       <div class="carousel-caption">
         <div class="cap-two">
           <h1>Log Your Adventures</h1>
-          <p>A diary for your vacations</p>
+          <p>A diary for events, vacations, and adventures</p>
         </div>
       </div>
     </div>
