--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,4 +1,5 @@
-<h1 class="container title-sub">Log Your Adventure</h1>
-   <div>
-     <%= render partial: 'wikis/form' %>
-   </div>
+<div class="wiki-new-page">
+  <div>
+  <%= render partial: 'wikis/form' %>
+  </div>
+</div>
