--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -37,8 +37,8 @@
         <% end %>
       </div>
       <div class="wiki-description">
-        <h3>About:</h3>
-        <p><%= markdown(@wiki.body) %></p>
+        <h3>About this log:</h3>
+        <p><%= markdown(@wiki.body)%></p>
       </div>
     <% if current_user %>
     <div class="comment-form-div">
