change edit user page

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -55,12 +55,18 @@
     }
 }
 
+.edit-user-page {
+  background-color: rgba(1,1,1,.1);
+}
+
 .edit-user-inputs {
   width: 250px;
 }
 
 .edit-profile-form {
   margin-left: 50px;
+  padding-left: 40px;
+  background-color: white;
 }
 
 .user-description {
