fix wiki edit page

--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,21 +1,21 @@
-<div class="all-images-btn"> <%= link_to "View All Images", wiki_pic_path(@wiki.pics, @wiki),class: 'btn btn-default' %></div>
-<div class="all-videos-btn"> <%= link_to "View All Videos", wiki_clip_path(@wiki.clips, @wiki), class: 'btn btn-default' %></div>
-  <div class="wiki-image-top"><%= image_tag(@wiki.image.url(:large))%></div>
+<div class="all-images-btn"><%= link_to "View All Images", wiki_pic_path(@wiki.pics, @wiki),class: 'btn btn-default' %></div>
+<div class="all-videos-btn"><%= link_to "View All Videos", wiki_clip_path(@wiki.clips, @wiki), class: 'btn btn-default' %></div>
+<div class="wiki-image-top"><%= image_tag(@wiki.image.url(:large))%></div>
   <div class="container wiki-show-body">
     <div class="row col-md-10 wiki-body">
-      <div class="wiki-info">
-        <%= image_tag(@wiki.user.image.url(:thumb)) %>
+      <section class="wiki-info">
+        <%= link_to image_tag(@wiki.user.image.url(:thumb)), user_path(@wiki.user) %>
         <% if user_is_authorized_for_wiki?(@wiki)%>
         <div class="user-action">
-          <button><%= link_to "Edit Log", edit_wiki_path(@wiki)%></button>
-          <button><%= link_to "Delete Log", @wiki, method: :delete, data: {confirm: 'Are you sure you want to delete this log?'} %></button>
+          <%= link_to "Edit Log", edit_wiki_path(@wiki), class: "btn btn-primary"%>
+          <%= link_to "Delete Log", @wiki, method: :delete, data: {confirm: 'Are you sure you want to delete this log?'}, class: "btn btn-danger" %>
         </div>
         <% end %>
         <h1 id="show-title"><%= @wiki.title %></h1>
         <h4 class="small-text"><%= @wiki.description %></h4>
         <h4 class="small-text"><%= @wiki.category.name %></h4>
-        <h4 class="wiki-user-username"><%= link_to @wiki.user.username, user_path(@wiki.user) %></h4>
-      </div>
+        <%= link_to @wiki.user.username, user_path(@wiki.user) %>
+      </section>
       <div class="wiki-icons">
         <p class="glyphicon glyphicon-heart"></p>
         <p class="glyphicon glyphicon-comment"></p>
