--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -134,7 +134,11 @@
 .wiki-user-username {
   float: right;
   padding-right: 28px;
-  margin-top: -5px
+  margin-top: -5px;
+
+    a {
+      
+    }
 }
 
 .small-text {
@@ -176,7 +180,6 @@
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 10px;
-  box-shadow: 2px 2px 2px rgba(1,1,1, .4);
 
     h3 {
       font-weight: 200;
@@ -204,40 +207,6 @@
 .user-action {
   width: 200px;
   float: right;
-
-  button {
-    padding: 10px;
-    border-radius: 5px;
-    background-color: white;
-    border: 2px solid rgba(1,1,1,.2);
-    text-decoration: none;
-      &:hover{
-        background-color: rgba(1,1,1,.5);
-      }
-    }
-
-    button:nth-child(2) {
-      color: rgb(230, 32, 32);
-      border: 2px solid rgba(1,1,1,.2);
-      background-color: tomato;
-        &:hover {
-          background-color: white;
-        }
-    }
-
-    a {
-      color: rgba(1,1,1,.5);
-      font-weight: 500;
-    }
-
-    a:nth-child(2) {
-      color: rgb(230, 32, 32);
-      font-weight: 500;
-        &:hover {
-          text-decoration: none;
-          color: rgba(1,1,1,.5);
-        }
-    }
 }
 
 .side-images {
