--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,4 +1,5 @@
-<h1 class="title-sub container"> Edit Log </h1>
-  <div class="row col-md-8">
+<div class="wiki-new-page">
+  <div>
     <%= render partial: 'wikis/form' %>
   </div>
+</div>
