--- a/app/views/votes/_like.html.erb
+++ b/app/views/votes/_like.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %>
 <div class="heart-like">
   <% if vote = current_user.like_for(wiki) %>
-    <%= link_to [wiki, @vote], method: :delete do %>
+    <%= link_to [wiki, vote], method: :delete do %>
       <i class="heart-glyph glyphicon glyphicon-heart"> </i>
   <% end %>
   <% else %>
