--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -8,20 +8,19 @@
   display: -webkit-box;
 }
 
-.header-msg {
-  img {
-    width: 40px;
-  	height: 40px;
-    margin-right: 15px;
-  	-webkit-border-radius: 150px;
-  	-moz-border-radius: 150px;
-  	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-  }
-}
-
 .msg-content {
   margin-bottom: 10px;
   margin-top: 10px;
+  padding-left: 5px;
+
+  img {
+    width: 40px;
+    height: 40px;
+    margin-right: 15px;
+    -webkit-border-radius: 150px;
+    -moz-border-radius: 150px;
+    -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  }
 }
 
 .msg-item {
@@ -37,7 +36,6 @@
       font-weight: 200;
     }
 }
-
 
 .list-msg {
   padding-left: 75px;
