--- a/app/assets/stylesheets/pics.scss
+++ b/app/assets/stylesheets/pics.scss
@@ -3,10 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .pic-show {
   margin-top: 20px;
+
     img {
-    height: 200px;
-    width: 330px;
-    margin: 5px;
+      height: 200px;
+      width: 330px;
+      margin: 5px;
     }
 }
 
@@ -18,4 +19,8 @@
 
 .pic-each {
   text-align: center;
+
+  .btn {
+    margin-top: 5px;
+  }
 }
