--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -51,19 +51,23 @@
 
 .wiki-info {
     border-bottom: 1px solid rgba(1, 0, 1, .2);
-    padding-bottom: 15px;
     margin-top: -5px;
-}
 
-.wiki-info img {
-  float: right;
-  clear: right;
-  width: 100px;
-  -webkit-border-radius: 150px;
-  -moz-border-radius: 150px;
-  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-  -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+      p {
+        font-size: 18px;
+        color: rgba(1,1,1,.5);
+      }
+
+       img {
+        float: right;
+        clear: right;
+        width: 100px;
+        -webkit-border-radius: 150px;
+        -moz-border-radius: 150px;
+        box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+        -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+        -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+      }
 }
 
 .wiki-btn {
@@ -101,10 +105,11 @@
    .back {
      background-position: center;
    }
-}
 
-.wiki-image-top img {
-  width: 1430px;
+    img {
+      height: auto;
+      width: auto;
+    }
 }
 
 .wiki-details {
@@ -116,15 +121,11 @@
 }
 
 .all-images-btn {
-  position: absolute;
   margin-top: 500px;
-  margin-left: 30px;
-}
 
-.all-videos-btn {
-  position: absolute;
-  margin-top: 500px;
-  margin-left: 200px;
+    .btn {
+      margin-left: 20px;
+    }
 }
 
 .link {
@@ -135,10 +136,6 @@
   float: right;
   padding-right: 28px;
   margin-top: -5px;
-
-    a {
-      
-    }
 }
 
 .small-text {
@@ -149,26 +146,6 @@
   margin-bottom: 1px;
   border-bottom: 1px solid rgba(1, 1, 1, .1);
   margin-top: -4px;
-}
-
-.wiki-icons {
-  letter-spacing: 100px;
-  margin-left: 30px;
-  padding-top: 5px;
-
-  .glyphicon {
-    font-size: 30px;
-  }
-}
-
-.wiki-icons-tag {
-  padding-right: 145px;
-  padding-left: 27px;
-}
-
-.wiki-icons-content {
-  border-bottom: 1px solid rgba(1, 1, 1, .2);
-  padding-bottom: 10px;
 }
 
 .wiki-show-body {
@@ -268,4 +245,16 @@
 
 #border {
   border-top: 1px solid rgba(1,1,1,.1);
+}
+
+.wiki-icons {
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.wiki-media {
+  position: absolute;
+  top: 0;
+  margin-left: 120px;
 }
