--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,12 +34,12 @@
         <% if user_signed_in? %>
         <li class="presentation share-btn"><%= link_to "New Log", new_wiki_path %></li>
         <div class="avatar-button btn-group pull-right">
-          <button type="button" class="btn btn-default btn-avatar">  <%= image_tag(current_user.image.url(:thumb)) %></button>
+          <button type="button" class="btn btn-default btn-avatar">  <%= link_to image_tag(current_user.image.url(:thumb)), user_path(current_user) %></button>
           <button type="button" class="btn btn-default dropdown-toggle btn-avatar" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="caret"></span>
             <span class="sr-only">Toggle Dropdown</span>
           </button>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-user dropdown-menu">
               <li><i class="fa fa-user-circle-o" aria-hidden="true"> <%= link_to current_user.username, user_path(current_user) %></i></li>
               <li><i class="fa fa-pencil-square-o" aria-hidden="true"> <%= link_to 'Edit profile', edit_user_path(current_user) %></i></li>
               <li><i class="fa fa-sign-out" aria-hidden="true"> <%= link_to "Log Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></i></li>
