--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="new-wiki-form">
+<div class="container new-wiki-form">
   <h1 class="title-sub">Log Your Adventure</h1>
   <p>Record your most recent vacation, adventure, or event for memories or to share with others.</p>
   <%= form_for @wiki, html: { multipart: true }, :validate=>true do |f| %>
