--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -105,19 +105,14 @@
    .back {
      background-position: center;
    }
-
-    img {
-      height: auto;
-      width: auto;
-    }
 }
 
 .wiki-details {
   margin-top: 0px;
-}
 
-.wiki-details h5 {
-  margin-bottom: -2px;
+    h5 {
+      margin-bottom: -2px;
+    }
 }
 
 .all-images-btn {
@@ -234,7 +229,7 @@
   font-weight: 100;
 }
 
-.wiki-media {
+.wiki-attachments {
   padding-bottom: 10px;
 
     h3 {
@@ -257,4 +252,5 @@
   position: absolute;
   top: 0;
   margin-left: 120px;
+  margin-top: 150px;
 }
