update welomce index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -207,11 +207,9 @@ body {
 }
 
 .title-sub {
-  border-bottom: 3px solid rgba(1, 0, 1, .2);
-  padding-bottom: 5px;
   color: rgba(1,1,1,.5);
   font-weight: 200;
-  letter-spacing: -1px;
+  font-size: 45px;
 }
 
 .scroller {
