--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -201,14 +201,15 @@
 
     h1 {
       color: rgba(1,1,1,.6);
-      font-size: 52px;
+      font-size: 55px;
+      font-weight: 200;
     }
 
     p {
       color: rgba(1,1,1,.5);
-      font-size: 20px;
+      font-size: 22px;
       float: left;
-      padding-left: 14px;
+      padding-left: 24px;
     }
 }
 
@@ -219,14 +220,16 @@
   text-shadow: none;
 
     h1 {
-      font-size: 52px;
+      font-size: 55px;
       padding-right: 440px;
+      font-weight: 200;
     }
 
     p {
-      font-size: 20px;
+      font-size: 22px;
       float: left;
-      padding-left: 20px;
+      padding-left: 22px;
+      font-weight: 200;
     }
 }
 
@@ -236,13 +239,16 @@
   text-shadow: none;
 
     h1 {
-      font-size: 52px;
+      font-size: 55px;
       margin-right: 970px;
+      font-weight: 200;
     }
 
     p {
-      font-size: 20px;
+      font-size: 22px;
       float: left;
+      font-weight: 200;
+      padding-left: 10px;
     }
 }
 
