fix pictures view

--- a/app/views/clips/_form.html.erb
+++ b/app/views/clips/_form.html.erb
@@ -5,7 +5,7 @@
    </div>
    <div class="form-all form-group">
      <%= f.label :video %>
-     <%= f.file_field :video%>
+     <%= f.file_field :video, required: true %>
    </div>
    <%= f.submit "Upload", class: 'btn btn-default pull-right' %>
  <% end %>
