--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for [wiki, comment] do |f| %>
    <div class="form-group">
      <%= f.label :body, class: 'sr-only' %>
-     <%= f.text_area :body, class: 'form-control', rows:"3", placeholder: "Enter a new comment" %>
+     <%= f.text_area :body, class: 'form-control', rows:"3", placeholder: "Enter a new comment", required: true %>
    </div>
     <%= f.submit "Submit Comment", class: 'btn btn-primary pull-right' %>
  <% end %>
