--- a/app/views/pics/show.html.erb
+++ b/app/views/pics/show.html.erb
@@ -3,10 +3,10 @@
   <% if @wiki.pics.empty? %>
    <p> No Images Posted<p>
   <% else %>
-  <div class="row">
+  <div>
     <% @wiki.pics.each do |pic| %>
-      <div class="pic-each col-md-4">
-        <%=link_to (image_tag (pic.image.url(:medium))), pic.image.url(:album), data: {lightbox: "eaxmple-set", title: pic.caption }%>
+      <div class="pic-each col-md-6">
+        <%=link_to (image_tag (pic.image.url(:medium))), pic.image.url(:big), data: {lightbox: "eaxmple-set", title: pic.caption }%></br>
         <% if user_is_authorized_for_pic? %>
         <%= link_to "Delete", [pic.wiki, pic], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this image?'} %>
         <% end %>
