--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -42,7 +42,7 @@
           <p>No pictures</p>
         <% else %>
           <% @wiki.pics.take(6).each do |pic| %>
-            <div class="row col-sm-6"><%= link_to (image_tag(pic.image.url(:thumb))), pic.image.url(:album), data: {lightbox: "eaxmple-set"}  %></div>
+            <div class="row col-sm-6"><%= link_to (image_tag(pic.image.url(:thumb))), pic.image.url(:big), data: {lightbox: "eaxmple-set"}  %></div>
           <% end %>
         <% end %>
       </div>
